@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-06T01:06:13Z",
-  "count_outdated" : 40,
-  "uniques_outdated" : 30,
+  "timestamp" : "2023-07-06T08:14:29Z",
+  "count_outdated" : 41,
+  "uniques_outdated" : 31,
   "count" : 45,
   "uniques" : 34,
   "clones" : [
-    {
-      "timestamp": "2023-06-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-25T00:00:00Z",
       "count": 1,
